--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
-	<body>
-		<input type="text" name="" id="location" />
-		<div class="content" id="catFact"></div>
+	<body class="flex-center flex-column">
+		<input type="text" name="" id="location" placeholder="Skriv inn bynavn her" />
+		<div class="content flex-center flex-column" id="catFact">
+			<div class="flex flex-column">
+				<div class="flex-center">
+					<h1>Værdata</h1> 
+					
+				</div>
+			<div>
+			<p>Skriv inn en by i søkefeltet for å finne værinfo<p>
+			
+		</div>
 
 		<script src="js/script.js"></script>
 	</body>
